Bug 163551 - Comments Sidebar: Filter by Author not working when another author is selected
Summary: Comments Sidebar: Filter by Author not working when another author is selected
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mohit Marathe
URL:
Whiteboard: target:25.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-21 11:26 UTC by Mohit Marathe
Modified: 2024-11-15 06:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mohit Marathe 2024-10-21 11:26:09 UTC
Description:
"Reset" button is needed to be pressed to filter comments by author.

Steps to Reproduce:
1.Open a doc containing comments from more than one author.

2.Filter the comments by selecting some author (Author_1). It only shows comments by Author_1, so works as expected.

3.Now selected another author (Author_2). It does not show any comments.

4. Press "Reset". Now it shows the comments by Author_2

Actual Results:
 

Expected Results:
Pressing "Reset" shouldn't be necessary to filter comments by author.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a5b1c57718777a761b66893030bff6a26e76b26a
CPU threads: 8; OS: Linux 6.11; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2024-10-21 11:31:59 UTC
Mohit Marathe committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9fca60fb13a7ac30bf763e630c5fdaed2e98b119

tdf#163551 fix filter comments by author bug

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Buovjaga 2024-11-04 13:35:57 UTC
You can change the status to fixed, if no further work is needed.