tdf#163551 fix filter comments by author bug

This patch fixes the bug in which you have to reset the date filter
for filter by author to work i.e. when switching the filter from one
author to another

Change-Id: Ib5d3bebf587c0e940d4984dd78f9d4a94f5cbb06
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175189
Tested-by: Jenkins
Reviewed-by: Sarper Akdemir <sarper.akdemir@allotropia.de>